--- a/logbook/index.html
+++ b/logbook/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	<link rel="shortcut icon" type="image/png" href="images/icon.png"/>
+	<link rel="shortcut icon" type="image/png" href="images/icon.png" />
 </head>
 
 <body>
@@ -45,8 +45,8 @@
 						<h2>Write  in Slack <br />
 								see it in a Spreadsheet</h2>
 					</header>
-					<p>Every team needs a place to where to log and read the work done by each team mate. <br /> <em>Logbook</em> is a Slack command <code>/logbook</code> that sends your text to a Google Spreadsheet.
-						<br />
+					<p>Every team needs a place where to keep a log of the work done by each team mate each day. <br /> <em>Logbook</em> is a (slack) slash command <code>/logbook</code> that sends your text to a Google Spreadsheet.
+						</br/>
 						<b>Simple and effective!</b>
 					</p>
 				</div>
@@ -105,7 +105,7 @@
 					</header>
 					<ul class="fa-ul icons_ul">
 						<li>
-							<i class="fa fa-user-secret fa-2x"></i> <span class="text">The Spreadsheet is in your hand, only the server has to access it (to write the logs), and then you can deicide to whom to share it.</span>
+							<i class="fa fa-user-secret fa-2x"></i> <span class="text">The Spreadsheet is in your hand, only the server has to access it (to write the logs), and then you can deicide who has access to it.</span>
 						</li>
 						<li>
 							<span class="fa-stack">
@@ -138,7 +138,7 @@
 			<header class="major">
 				<h2>Sustain</h2>
 			</header>
-			<p>This project is a side project. I do work at <a href="https://chino.io">chino.io</a> <br/> Since the server capacity is limited, it may break every now and then.
+			<p>This project is a side project. I do work at <a href="https://chino.io">chino.io</a> <br/> The server where the system runs has a cost.
 			</p>
 			<p>
 				Sustain the project, I will use this money to run the system and buy me coffee for coding time!
@@ -173,15 +173,19 @@
 					<p>
 						It may happen that log data are logged via print or debug. This should be temporary and only for debugging code.
 					</p>
+					<p>
+						All your data are stored on the spreadsheet you set, we don't have direct access to it.
+					</p>
 				</div>
 				<div class="4u 12u$(medium) section-justify">
 					<h3>Terms of Conditions</h3>
 					<p>The system is provided AS-IS. </br>
-						It's free and runs on a free tier of Google App Engine. The system may be dismissed without notice and there's no plan to offer support (but you can contact me and we can sort this out). <br />
+						It's free and runs on a Google App Engine. There's a cost for this that I'm covering. Thus I would love you if you want to make a <a href="#three">donation</a>. <br />
 					</p>
 					<p>
 						No liablity is taken for missing information or loss of information. Do not set this up for vital/important information. It has been born as side project and it still is.
 					</p>
+
 				</div>
 				<div class="4u$ 12u$(medium) section-justify">
 					<h3>License / Copyright</h3>
