--- a/index.html
+++ b/index.html
@@ -119,16 +119,16 @@
 						<h1><span class="icon fa-pied-piper-alt"></span> Entrepreneurship Life</h1>
 						<p>I co-founded (with Jovan) <a href="http://chino.io" target="_blank">Chino</a> - secure storage for health data according to EU privacy laws.</p>
 						<p> With Chino you can easily solve all security & EU privacy law compliance issues, increasing trust in your business.</p>
-						<p>Contact me: <span class="icon fa-envelope-o"><span class="label">Email</span>
-								<a href="mailto:stefano@chino.io">stefano@chino.io</a> -
-								<a href="E3B96842.asc">PGP </a>
+						<p>Contact me: <span class="icon fa-envelope-o"></span><span class="label">Email</span>
+							<a href="mailto:stefano@chino.io">stefano@chino.io</a></p>
+							
 					</section>
 
 
 				<!-- Programmer -->
 
 					<section id="four">
-						<h1><span class="icon fa-laptop"></span> Coder Life</h1>
+						<h1><span class="icon fa-laptop"></span> Coder (DevOp) Life</h1>
 						<p>I do write code at work and also in my spare time. Check my <a href="https://github.com/esseti/" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a> or <a href="http://stackoverflow.com/users/1257185/esseti" target="_blank" class="icon fa-stack-overflow"><span class="label">Stack Overflow</span></a> for more info. </p>
 						<i>You can hire me, but I don't have too much time for doing extra work. But pls contact me if interested:
 						<a href="#six" class="icon fa-envelope-o"><span class="label">email</span></a></i>
@@ -143,11 +143,11 @@
 								<tbody>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span></td>
-										<td>Python - Django - Google App Engine (python) - Java - Twitter bootstrap</td>
+										<td>Python - Django - Google App Engine (python) - Java - Twitter bootstrap & symilar</td>
 									</tr>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star-o"></span></td>
-										<td> AngularJS - Docker</td>
+										<td> Docker & Kubernetes (and similar) - AngularJS - CI - ElasticSearch - Distrubted system </td>
 									</tr>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star-half-o"></span><span class="icon fa-star-o"></span> </td>
@@ -166,6 +166,12 @@
 						<p class="test">For a while I was a <b>research fellow</b> @ <b>UNITN</b>. I worked on <a href="http://www.gymcentral.net" target="_blank">gymCentral</a>, which develops software and content to deliver training programs targeted at independently living older adults, via tablet or TV; and did research on crowdsourcing. </p>
 						<p>As PhD student  I investigated the world of Business Process Management (<b>BPM</b>) providing extensions to model processes that involve people, <b>wireless sensor networks</b>, and the <b>crowdsourcing </b>.</p>
 						<h2>Teaching</h2>
+						<h3>2016/2017</h3>
+								<ul>
+									<li>
+										ICT Innovation - Prof Fabio Massacci
+									</li>
+								</ul>
 						<h3>2015/2016</h3>
 							<ul>
 								<li>
@@ -417,6 +423,7 @@
 					<li><a href="https://github.com/esseti/" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="http://stackoverflow.com/users/1257185/esseti" target="_blank" class="icon fa-stack-overflow"><span class="label">Stack Overflow</span></a></li>
 					<li><a href="#six" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="https://keybase.io/esseti" class="incon fa-key" target="_blank"><span class="label">PGP</span></a></li>
 					<li><a href="http://esseti.tumblr.com/" target="_blank" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 					<li><a href="https://gist.github.com/esseti/0f2f22e8edd08d19a795" target="_blank" class="icon fa-file-text"><span class="label">Notes</span></a></li>
 				</ul>
