--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
 										<tr>
 											<td><i class="fa fa-pied-piper-alt"></i></td>
 											<td>Nov 2015</td>
-											<td>Goodbye University. Now full time @ <a href="http://www.chino.io" target="_blank">Chino</a></td>
+											<td>Goodbye University. Now full time @ <a href="http://www.chino.io" target="_blank">Chino</a>.</td>
 										</tr>
 										<tr>
 											<td><i class="fa fa-pied-piper-alt"></i></td>
 											<td>Dec 2014</td>
-											<td>CTO and Co-Founder @ <a href="http://www.chino.io" target="_blank">Chino</a></td>
+											<td>CTO and Co-Founder @ <a href="http://www.chino.io" target="_blank">Chino</a>.</td>
 										</tr>
 										<tr>
 											<td><i class="fa fa-university"></i></td>
 											<td>Mar 2014</td>
-											<td>Research fellow @ <a href="http://www.lifeparticipation.org" target="_blank">UNITN</a>. Working for most of the time on <a href="http://www.gymcentral.net" target="_blank">gymCentral</a></td>
+											<td>Research fellow @ <a href="http://www.lifeparticipation.org" target="_blank">UNITN</a>. Working for most of the time on <a href="http://www.gymcentral.net" target="_blank">gymCentral</a>.</td>
 										</tr>
 										<tr>
 											<td><i class="fa fa-graduation-cap"></i></td>
@@ -92,22 +92,22 @@
 										<tr>
 											<td><i class="fa fa-plane"></i> <i class="fa fa-university"></i></td>
 											<td>Jun 2012 - Oct 2012</td>
-											<td>Visiting PhD @ SAP Karlsruhe D</td>
+											<td>Visiting PhD @ SAP Karlsruhe D.</td>
 										</tr>
 										<tr>
 											<td><i class="fa fa-university"></i></td>
 											<td>Dec 2010</td>
-											<td>PhD Student @ UNITN</td>
+											<td>PhD Student @ UNITN.</td>
 										</tr>
 										<tr>
 											<td><i class="fa fa-plane"></i> <i class="fa fa-wrench"></i></td>
 											<td>Apr 2010 - Dec 2010</td>
-											<td>Intern Researcher @ HP Labs, Bristol UK</td>
+											<td>Intern Researcher @ HP Labs, Bristol UK.</td>
 										</tr>
 										<tr>
 											<td><i class="fa fa-graduation-cap"></i></td>
 											<td>Apr 2010</td>
-											<td>MSc in Computer Science @ UNITN</td>
+											<td>MSc in Computer Science @ UNITN.</td>
 										</tr>
 									</tbody>
 								</table>
@@ -131,7 +131,7 @@
 						<h1><span class="icon fa-laptop"></span> Coder (DevOp) Life</h1>
 						<p>I do write code at work and also in my spare time. Check my <a href="https://github.com/esseti/" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a> or <a href="http://stackoverflow.com/users/1257185/esseti" target="_blank" class="icon fa-stack-overflow"><span class="label">Stack Overflow</span></a> for more info. </p>
 						<i>You can hire me, but I don't have too much time for doing extra work. But pls contact me if interested:
-						<a href="#six" class="icon fa-envelope-o"><span class="label">email</span></a></i>
+						<a href="#six" class="icon fa-envelope-o"><span class="label"> email</span></a></i>
 						<div class="table-wrapper">
 							<table>
 								<thead>
@@ -143,15 +143,15 @@
 								<tbody>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span></td>
-										<td>Python - Django - Google App Engine (python) - Java - Twitter bootstrap & symilar</td>
+										<td>Python - Django - Google App Engine (python) - Java - Twitter bootstrap & symilar.</td>
 									</tr>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star-o"></span></td>
-										<td> Docker & Kubernetes (and similar) - AngularJS - CI - ElasticSearch - Distrubted system </td>
+										<td> Docker & Kubernetes (and similar) - AngularJS - CI - ElasticSearch - Distrubted system.</td>
 									</tr>
 									<tr>
 										<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star-half-o"></span><span class="icon fa-star-o"></span> </td>
-										<td>PHP - BackboneJs - CSS - Android</td>
+										<td>PHP - BackboneJs - CSS - Android.</td>
 									</tr>
 								</tbody>
 							</table>
@@ -169,22 +169,22 @@
 						<h3>2016/2017</h3>
 								<ul>
 									<li>
-										ICT Innovation - Prof Fabio Massacci
+										ICT Innovation - Prof Fabio Massacci.
 									</li>
 								</ul>
 						<h3>2015/2016</h3>
 							<ul>
 								<li>
-									Business Process Management - Prof Fabio Casati
+									Business Process Management - Prof Fabio Casati.
 								</li>
 								<li>
-									ICT Innovation - Prof Fabio Massacci
+									ICT Innovation - Prof Fabio Massacci.
 								</li>
 							</ul>
 							<h3>2014/2015</h3>
 								<ul>
 									<li>
-										ICT Innovation - Prof Fabio Massacci
+										ICT Innovation - Prof Fabio Massacci.
 									</li>
 								</ul>
 
@@ -359,7 +359,7 @@
 										</tr>
 										<tr>
 											<td>Lifeshare</td>
-											<td>Share your life moment with people who cares.</td>
+											<td>Share your life moment with people who care.</td>
 											<td><a href="http://lifeparticipation.org/lifeshare.html" target="_blank"><span class="icon fa-external-link"></span></a></td>
 										</tr>
 										<tr>
@@ -374,7 +374,7 @@
 										</tr>
 										<tr>
 											<td>MarcoFlow</td>
-											<td>Orchestration of UIs in BPM</td>
+											<td>Orchestration of UIs in BPM.</td>
 											<td><a href="http://sites.google.com/site/mashtn/industrial-projects/marcoflow/demo" target="_blank"><span class="icon fa-external-link"></span></a></td>
 										</tr>
 									</tbody>
