--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td>Journal</td>
+											<td></td>
 											<td>CrowdCafe - Mobile Crowdsourcing Platform</td>
-											<td>ACM</td>
+											<td>Arxiv</td>
 											<td>2016</td>
 											<td><a href="papers/KucherbaevArxiv2016.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
 										</tr>
