--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 					<li><a href="https://github.com/esseti/" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="http://stackoverflow.com/users/1257185/esseti" target="_blank" class="icon fa-stack-overflow"><span class="label">Stack Overflow</span></a></li>
 					<li><a href="#six" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					<li><a href="http://blog.stefanotranquillini.me" target="_blank" class="icon fa-file-text"><span class="label">Blog</span></a></li>
+					<li><a href="http://stefanotranquillini.wordpress.com" target="_blank" class="icon fa-file-text"><span class="label">Blog</span></a></li>
 				</ul>
 
 			</footer>
