--- a/index.html
+++ b/index.html
@@ -166,28 +166,10 @@
 						<p class="test">For a while I was a <b>research fellow</b> @ <b>UNITN</b>. I worked on <a href="http://www.gymcentral.net" target="_blank">gymCentral</a>, which develops software and content to deliver training programs targeted at independently living older adults, via tablet or TV; and did research on crowdsourcing. </p>
 						<p>As PhD student  I investigated the world of Business Process Management (<b>BPM</b>) providing extensions to model processes that involve people, <b>wireless sensor networks</b>, and the <b>crowdsourcing </b>.</p>
 						<h2>Teaching</h2>
-						<h3>2016/2017</h3>
-								<ul>
-									<li>
-										ICT Innovation - Prof Fabio Massacci.
-									</li>
-								</ul>
-						<h3>2015/2016</h3>
-							<ul>
-								<li>
-									Business Process Management - Prof Fabio Casati.
-								</li>
-								<li>
-									ICT Innovation - Prof Fabio Massacci.
-								</li>
-							</ul>
-							<h3>2014/2015</h3>
-								<ul>
-									<li>
-										ICT Innovation - Prof Fabio Massacci.
-									</li>
-								</ul>
-
+						<h3>ICT Innovation - Prof Fabio Massacci.</h3>
+						<p>14/15 15/16 16/17 17/18</p>
+						<h3>Business Process Management - Prof Fabio Casati.</h3>
+						<p> 15/16 </p>
 						<h2>Publications</h2>
 						<div class="table-wrapper">
 								<table>
@@ -201,6 +183,14 @@
 										</tr>
 									</thead>
 									<tbody>
+										
+										<tr>
+											<td></td>
+											<td>makeSense: Simplifying the Integration of Wireless Sensor Networks into Business Processes</td>
+											<td>IEEE Transactions on Software Engineering</td>
+											<td>2017</td>
+											<td><a href="papers/MottolaTSE2017.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
+										</tr>
 										<tr>
 											<td></td>
 											<td>CrowdCafe - Mobile Crowdsourcing Platform</td>
