--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 												<td>makeSense: Simplifying the Integration of Wireless Sensor Networks into Business Processes</td>
 												<td>IEEE Transactions on Software Engineering</td>
 												<td>2017</td>
-												<td><a href="papers/MottolaTSE2017.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
+												<td><a href="//disi.unitn.it/~picco/papers/tse17.pdf" target="_blank"><span class="icon fa-download"></span></a></td>
 											</tr>
 											<tr>
 												<td></td>
