--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 										<tbody>
 											<tr>
 												<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span></td>
-												<td>Python - Django - Google App Engine (python) - Java - Twitter bootstrap & symilar.</td>
+												<td>Python - Django - Docker & Kubernetes - ElasticSearch - Distrubted system - Twitter bootstrap & symilar.</td>
 											</tr>
 											<tr>
 												<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star-o"></span></td>
-												<td> Docker & Kubernetes (and similar) - AngularJS - CI - ElasticSearch - Distrubted system.</td>
+												<td>  Google App Engine (python) - Java - AngularJS - CI .</td>
 											</tr>
 											<tr>
 												<td><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star"></span><span class="icon fa-star-half-o"></span><span class="icon fa-star-o"></span> </td>
