--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<link rel="stylesheet" href="css/style-xlarge.css" />
 	</noscript>
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="images/favicon_new.ico" type="image/x-icon" />
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -166,7 +166,7 @@
 								<p class="test">For a while I was a <b>research fellow</b> @ <b>UNITN</b>. I worked on <a href="http://www.gymcentral.net" target="_blank">gymCentral</a>, which develops software and content to deliver training programs targeted at independently living older adults, via tablet or TV; and did research on crowdsourcing. </p>
 								<p>As PhD student  I investigated the world of Business Process Management (<b>BPM</b>) providing extensions to model processes that involve people, <b>wireless sensor networks</b>, and the <b>crowdsourcing </b>.</p>
 								<h2>Teaching</h2>
-								<p><b>ICT Innovation - Prof Fabio Massacci</b> 14/15, 15/16, 16/1, 17/18</p>
+								<p><b>ICT Innovation - Prof Fabio Massacci</b> 14/15, 15/16, 16/17, 17/18</p>
 								<p><b>Business Process Management - Prof Fabio Casati</b> 15/16 </p>
 								<h2>Publications</h2>
 								<div class="table-wrapper">
