--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="mailto:hello@stefanotranquillini.me">hello@stefanotranquillini.me</a> 
+										<a href="mailto:hello@stefanotranquillini.com">hello@stefanotranquillini.com</a> 
 										<a href="https://keybase.io/esseti">PGP </a>
 									</li>
 									<li>
