--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<!-- Header -->
 		<header id="header">
 			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-			<h1>Ciao. <strong>I'm Stefano Tranquillini.</strong><br/>
+			<h1>Ciao. <strong>My name is Stefano Tranquillin, but everybody calls me Stefano.<br/>
 				<a href="#three">CTO and CO-Founder @ CHINO.io</a><br />
 				<!-- <strike><small>Previusly: <a href="#two" >research fellow @ UNITN</a><small></strike><br /> -->
 
@@ -71,7 +71,7 @@
 								<tbody>
 									<tr>
 										<td><i class="fa fa-pied-piper-alt"></i></td>
-										<td>Nov 2015</td>
+										<td>Nov 2015 - Now</td>
 										<td>Goodbye University. Now full time @ <a href="http://www.chino.io" target="_blank">Chino</a>.</td>
 									</tr>
 									<tr>
