--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<!-- Header -->
 		<header id="header">
 			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-			<h1>Ciao. <strong>My name is Stefano Tranquillini, but everybody calls me Stefano.<br/>
+			<h1>Ciao. <strong>My name is Stefano Tranquillini,<br/> but everybody calls me Stefano.<br/>
 				<a href="#three">CTO and CO-Founder @ CHINO.io</a><br />
 				<!-- <strike><small>Previusly: <a href="#two" >research fellow @ UNITN</a><small></strike><br /> -->
 
