--- a/index.html
+++ b/index.html
@@ -26,27 +26,7 @@
 	</noscript>
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	<link rel="icon" href="images/favicon_new.ico" type="image/x-icon" />
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-19283831-5', 'auto');
-		ga('send', 'pageview');
-		  //ga('set', 'anonymizeIp', true);
-
-		</script>
-		<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-		<script type="text/javascript">
-			window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":null,"theme":"dark-top"};
-		</script>
-
-		<script type="text/javascript" src="//s3.amazonaws.com/cc.silktide.com/cookieconsent.latest.min.js"></script>
-		
-		<!-- End Cookie Consent plugin -->
-
-	</head>
+	
 	<body id="top">
 
 		<!-- Header -->
@@ -395,7 +375,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="mailto:hello@stefanotranquillini.com">hello@stefanotranquillini.com</a> 
+										<a href="mailto:stefano.tranquillini@gmail.com">stefano.tranquillini@gmail.com</a> 
 										<a href="https://keybase.io/esseti">PGP </a>
 									</li>
 									<li>
