--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link
-        href="//fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Roboto+Slab:wght@400;700&display=swapdisplay=swap"
+        href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Roboto+Slab:wght@400;700&display=swapdisplay=swap"
         rel="stylesheet">
     <script src="//kit.fontawesome.com/99a7e03b6b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="stefano.css">
+    <link rel="stylesheet" href="css/stefano.css">
     <title>Stefano Tranquillini</title>
 </head>
 
