--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
                                     class="fa fa-envelope-o"></span></a></li>
                         <li class="list-inline-item"><a href="http://stefanotranquillini.wordpress.com"
                                 target="_blank"><span class="fa fa-file-text"></span></a></li>
+                        <li class="list-inline-item"><a href="https://keybase.io/esseti" target="_blank"><span
+                                    class="fa fa-key"></span></a></li>
                     </ul>
                 </div>
 
@@ -60,7 +62,8 @@
                     <p>I am an owner/CTO at <a href="//www.chino.io" target="_blank">CHINO.io</a>, a
                         <i>law-security-tech</i> company that I founded in 2014.</p>
                     <p>I’ve worked
-                        in the R&D field as PostDoc (I hold a PhD in Computer Science), and in companies (at SAP and HPLabs).
+                        in the R&D field as PostDoc (I hold a PhD in Computer Science), and in companies (at SAP and
+                        HPLabs).
                     </p>
                     <p>
                         I’m a tech person with ability to code, organise the work of tech teams and manage tech people
@@ -124,13 +127,15 @@
                             <td>I'm a doctor <a href="https://www.youtube.com/watch?v=ji5_MqicxSo#t=57m4s"
                                     target="_blank">
                                     <i class="fas fa-user-md"></i> but not the kind who helps
-                                    people</a>. <br>Thesis <em><a href="https://www.slideshare.net/EsseTi/phd-thesis-60902609" target="_blank">"Model and systems for managing sensor and crowd-oriented
-                                    processes"</a></em>.</td>
+                                    people</a>. <br>Thesis <em><a
+                                        href="https://www.slideshare.net/EsseTi/phd-thesis-60902609"
+                                        target="_blank">"Model and systems for managing sensor and crowd-oriented
+                                        processes"</a></em>.</td>
                         </tr>
                         <tr>
-                            <td><i class="fa fa-2x fa-plane" data-toggle="tooltip" data-placement="top" title="Abroad"></i> <i
-                                    class="fa fa-2x fa-university" data-toggle="tooltip" data-placement="top"
-                                    title="Academic"></i></td>
+                            <td><i class="fa fa-2x fa-plane" data-toggle="tooltip" data-placement="top"
+                                    title="Abroad"></i> <i class="fa fa-2x fa-university" data-toggle="tooltip"
+                                    data-placement="top" title="Academic"></i></td>
                             <td>Jun 2012</td>
                             <td>Oct 2012</td>
                             <td>Visiting PhD @ SAP Karlsruhe D.</td>
@@ -143,9 +148,9 @@
                             <td>PhD Student @ UNITN.</td>
                         </tr>
                         <tr>
-                            <td><i class="fa fa-2x fa-plane" data-toggle="tooltip" data-placement="top" title="Abroad"> </i><i
-                                        class="fa fa-2x fa-wrench" data-toggle="tooltip" data-placement="top"
-                                        title="Work"></i></td>
+                            <td><i class="fa fa-2x fa-plane" data-toggle="tooltip" data-placement="top" title="Abroad">
+                                </i><i class="fa fa-2x fa-wrench" data-toggle="tooltip" data-placement="top"
+                                    title="Work"></i></td>
                             <td>Apr 2010</td>
                             <td>Dec 2010</td>
                             <td>Intern Researcher @ HP Labs, Bristol UK.</td>
@@ -168,8 +173,8 @@
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                         <a class="nav-item nav-link active" id="ent-tab" data-toggle="tab" href="#ent" role="tab"
-                            aria-controls="ent" aria-selected="false"><span
-                                class="fa fa-pied-piper-alt"></span> Entrepreneur Life</a>
+                            aria-controls="ent" aria-selected="false"><span class="fa fa-pied-piper-alt"></span>
+                            Entrepreneur Life</a>
                         <a class="nav-item nav-link" id="code-tab" data-toggle="tab" href="#code" role="tab"
                             aria-controls="code" aria-selected="false"><span class="fa fa-laptop"></span> Coder (DevOp)
                             Life</a>
@@ -260,11 +265,15 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="research" role="tabpanel" aria-labelledby="research-tab">
-                        <p>I've a <a href="https://www.slideshare.net/EsseTi/bachelor-thesis-presentation-2517627" target="_blank">bachelor degree</a>, 
-                            a <a href="https://www.slideshare.net/EsseTi/stefano-tranquillini-master-thesis-presentation" target="_blank">master
-                            degree</a>, 
-                            and a <a href="https://www.slideshare.net/EsseTi/phd-thesis-60902609" target="_blank">Phd</a> 
-                            (<a href="https://www.slideshare.net/EsseTi/3yearsofphd" target="_blank">that took me three years, 1000 days)</a>
+                        <p>I've a <a href="https://www.slideshare.net/EsseTi/bachelor-thesis-presentation-2517627"
+                                target="_blank">bachelor degree</a>,
+                            a <a href="https://www.slideshare.net/EsseTi/stefano-tranquillini-master-thesis-presentation"
+                                target="_blank">master
+                                degree</a>,
+                            and a <a href="https://www.slideshare.net/EsseTi/phd-thesis-60902609"
+                                target="_blank">Phd</a>
+                            (<a href="https://www.slideshare.net/EsseTi/3yearsofphd" target="_blank">that took me three
+                                years, 1000 days)</a>
                             in computer science from University of Trento, Italy</p>
                         <p class="test">For a while I was a <b>research fellow</b> @ <b>UNITN</b>. I worked on <a
                                 href="http://www.gymcentral.net" target="_blank">gymCentral</a>, which develops software
