update intp link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <p> I’ve experience in public speaking. I’ve done that at various events in front of large crowds
                         (most of the time in English).
                     </p>
-                    <p>Last time i took the test I resulted a <a href="https://www.16personalities.com/intp-personality"
+                    <p>Last time i took the test I resulted a <a href="https://www.16personalities.com/profiles/0a73feb1508ce"
                             target="_blank">INTP-T</a> type</p>
                 </div>
 
