--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                     class="fa fa-github"></span></a></li>
                         <li class="list-inline-item"><a href="http://stackoverflow.com/users/1257185/esseti"
                                 target="_blank"><span class="fa fa-stack-overflow"></span></a></li>
-                        <li class="list-inline-item"><a href="mailto:stefano.tranquillini+website@gmail.com"><span
+                        <li class="list-inline-item"><a href="https://mailhide.io/e/WuMEF" target="_blank"><span
                                     class="fa fa-envelope-o"></span></a></li>
                         <li class="list-inline-item"><a href="http://stefanotranquillini.wordpress.com"
                                 target="_blank"><span class="fa fa-file-text"></span></a></li>
