--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="//kit.fontawesome.com/99a7e03b6b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/stefano.css">
     <title>Stefano Tranquillini</title>
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
 </head>
 
 <body>
