--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                     <!-- <hr class="my-4"> -->
                     <p>I'm CO-Founder @ <a href="//www.chino.io" target="_blank">CHINO.io</a>
                     </p>
+                    
                     <ul class="list-inline">
-
+                        <li class="list-inline-item">Useful stuff:</li>
                         <li class="list-inline-item"><a href="http://it.linkedin.com/in/stefanotranquillini"
                                 target="_blank"><span class="fa fa-linkedin"></span></a></li>
                         <li class="list-inline-item"><a href="https://twitter.com/esse_ti" target="_blank"><span
