--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 </head>
 
 <body>
-    <section id="header">
+    <section id="header" class="fullscreen">
         <div class="container">
-            <div class="row ">
-                <div class="col-md-3 ">
+         
+                <div class="div1">
                     <img id="me" src="" class="img-thumbnail" width="200px">
-                </div>
-                <div class="col-9">
+                    <div>
                     <h1>Ciao.</h1>
                     <p>My name is Stefano Tranquillini, <br />
                         but everybody calls me <b>Stefano</b>.</p>
@@ -53,7 +52,6 @@
                                     class="fa fa-key"></span></a></li>
                     </ul>
                 </div>
-
             </div>
         </div>
     </section>
